css fix - prevent prices from wrapping to new line.
Unless container width does not fit content in both columns.

--- a/client/components/jetpack/card/jetpack-product-card/style.scss
+++ b/client/components/jetpack/card/jetpack-product-card/style.scss
@@ -92,7 +92,7 @@ $jetpack-product-card-icon-size: 55px;
 }
 
 .jetpack-product-card__headings {
-	width: 66%;
+	flex: 1;
 	margin-right: 16px;
 }
 
